--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,7 @@
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 80,
+    "lineWidth": 120,
     "lineEnding": "lf",
     "formatWithErrors": true
   },
@@ -63,6 +63,9 @@
       },
       "performance": {
         "noDelete": "error"
+      },
+      "a11y": {
+        "useKeyWithClickEvents": "off"
       }
     }
   },
