--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "db:fresh": "payload migrate:fresh",
     "db:seed": "bun run src/seed.ts",
     "db:seed:tag": "bun run src/tag-seed.ts",
-    "db:seed:product": "bun run src/product-seed.ts"
+    "db:seed:product": "bun run src/product-seed.ts",
+    "db:seed:user": "bun run src/user-seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@payloadcms/db-mongodb": "^3.38.0",
     "@payloadcms/next": "^3.38.0",
     "@payloadcms/payload-cloud": "^3.38.0",
+    "@payloadcms/plugin-multi-tenant": "^3.38.0",
     "@payloadcms/richtext-lexical": "^3.38.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
