--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.20"
+    "zod": "^3.25.20",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
